apps/keycloak/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-lan
  namespace: keycloak
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`auth.mmlinaric.com`)
      kind: Rule
      services:
        - name: keycloak-service
          port: 8080
  tls:
    secretName: keycloak-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-public
  namespace: keycloak
spec:
  entryPoints: [tunnel]
  routes:
    - match: Host(`auth.mmlinaric.com`) && !PathPrefix(`/admin`) && !PathPrefix(`/realms/master`)
      kind: Rule
      services:
        - name: keycloak-service
          port: 8080
  tls:
    secretName: keycloak-tls
